# imart-ai-agent

./: .gitignore  Python_AI_Agent_Guide.md  soulog-memory-design.md  tutorial.md
app-ai/: .env.example  .gitignore  Dockerfile  README.md  changelog  changelog.md  clear_user_memory.py  development-guides.md  docker-compose.yml  milvus-standalone-docker-compose.yml  pyproject.toml  python-agent-tutorial.md  python-basic-tutorial.md  python-quick-starts.md  rag-enhancement-roadmap.md  requirements.txt
app-ai-base/: .env.example  README.md  milvus-standalone-docker-compose.yml  pyproject.toml
app-ai-base/src/: main.py
app-ai-base/src/agent/: agent_loop.py  token_budget.py
app-ai-base/src/config/: settings.py
app-ai-base/src/guardrails/: checker.py  content_policy.py  injection_detector.py  pii_filter.py
app-ai-base/src/llm/: claude_client.py
app-ai-base/src/memory/: vector_memory.py
app-ai-base/src/rag/: chunker.py  embeddings.py  milvus_utils.py  reranker.py  retriever.py
app-ai-base/src/routers/: agent.py  common.py  rag.py
app-ai-base/src/schemas/: request.py  response.py
app-ai-base/src/tools/: calculator.py  code_exec.py  registry.py  web_search.py
app-ai-base/src/utils/: file_parser.py
app-ai-simple/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app-ai-simple/src/: main.py
app-ai-simple/src/agent/: agent_loop.py  token_budget.py
app-ai-simple/src/config/: settings.py
app-ai-simple/src/guardrails/: checker.py  content_policy.py  injection_detector.py  pii_filter.py
app-ai-simple/src/llm/: claude_client.py
app-ai-simple/src/memory/: vector_memory.py
app-ai-simple/src/rag/: chunker.py  embeddings.py  milvus_utils.py  retriever.py
app-ai-simple/src/routers/: agent.py  rag.py
app-ai-simple/src/schemas/: request.py  response.py
app-ai-simple/src/tools/: calculator.py  registry.py  web_search.py
app-ai-simple/src/utils/: file_parser.py
app-ai/src/: main.py
app-ai/src/agent/: agent_loop.py  token_budget.py
app-ai/src/config/: settings.py
app-ai/src/guardrails/: checker.py  content_policy.py  injection_detector.py  pii_filter.py
app-ai/src/llm/: claude_client.py
app-ai/src/memory/: vector_memory.py
app-ai/src/rag/: chunker.py  embeddings.py  milvus_utils.py  reranker.py  retriever.py
app-ai/src/routers/: agent.py  rag.py
app-ai/src/schemas/: request.py  response.py
app-ai/src/tools/: calculator.py  database.py  registry.py  web_search.py
app-ai/src/utils/: file_parser.py
app-ai/tests/unit/: test_guardrails.py  test_reranker.py  test_token_budget.py
app-editor/platejs/: index.html  package-lock.json  package.json
app-web/: README.md  package-lock.json  package.json
app-web/app/: globals.css  layout.tsx
app-web/components/: ChatLayout.tsx
app-web/components/chat/: ChatArea.tsx  ChatInput.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  MessageList.tsx  WelcomeScreen.tsx
app-web/components/sidebar/: ChatHistoryList.tsx  (+2 more)
app-web/hooks/: useChats.ts  useStream.ts
app-web/lib/: constants.ts  storage.ts  types.ts  utils.ts
docs/: agent-memory.md  agent-rag-embeddings.md  agent-rag-pdf-ingestion.md  agent-rag-tools.md  agent-rag.md  app-ai-agent-memory.md  app-ai-architecture.md  app-ai-with-langchain.md  app-ai-with-langgraph.md  app-architecture.md  python-agent-tutorial.md
